--- a/Intro-position.html
+++ b/Intro-position.html
@@ -6,7 +6,18 @@
     </head>
     <body>
         <a-scene>
-            <a-sphere position="0 -1 -3" color="green" ></a-sphere>
+            <a-sphere position="0 3 -3" color="blue"></a-sphere>
+            <a-sphere position="4 3 -3" color="blue"></a-sphere>
+            <a-sphere position="-2 0 -3" color="red"></a-sphere>
+            <a-sphere position="-1 -1 -3" color="red"></a-sphere>
+            <a-sphere position="0 -2 -3" color="red"></a-sphere>
+            <a-sphere position="1 -3 -3" color="red"></a-sphere>
+            <a-sphere position="2 -3 -3" color="red"></a-sphere>
+            <a-sphere position="3 -3 -3" color="red"></a-sphere>
+            <a-sphere position="4 -2 -3" color="red"></a-sphere>
+            <a-sphere position="5 -1 -3" color="red"></a-sphere>
+            <a-sphere position="6 0 -3" color="red"></a-sphere>
+            
         </a-scene>
     </body>
 </html>
