--- a/index.html
+++ b/index.html
@@ -35,8 +35,14 @@
 <ul>
     <li><a href="animationExtras.html">Make the scene</a></li>
 </ul>
-<h2>3D models</h2>
 
+ <h2> Skydome-3D Images </h2>
+ <li><a href="Hunter's car 🥶.jpg">Hunter's Car</a> </li>
+ <li><a href="sky-show.html">Sky-Dome</a> </li>
+ <li><a href="sky-yourOwn.html">Do Your Own</a> </li>
+
+
+ <h2> 3D Models </h2>
 <ul>
     <li><a href="3dModel-dog.html">Dog</a></li>
 <li><a href="3dModel-yours.html">Display your dog</a></li>
