--- a/inspector-diagonals.html
+++ b/inspector-diagonals.html
@@ -16,8 +16,17 @@
             </a-plane>
             
             <!-- Set up shapes -->
-            <a-box color="grey" height=".5" width=".5" depth=".5"
-                position="0 1 0">
+            <a-box color="green" height="1" width="1" depth="1"
+                position="0 0 0">
+
+                <a-box color="green" height="1" width="1" depth="1"
+                position="0.5 0 -0.5">
+
+                <a-box color="green" height=1" width="1" depth="1"
+                position="1 0 -1">
+
+                <a-box color="red" height="1" width="1" depth="1"
+                position="1 0 -1">
             </a-box>
             
 
