--- a/sky-yourOwn.html
+++ b/sky-yourOwn.html
@@ -6,10 +6,12 @@
     <body>
         <a-scene>
             <!--
-            Photo Credit: Thanks to 
+            Photo Credit: Thanks to Gergely Vida for the photo!
+
+ 
             -->
 
-            <a-sky src="myImage.jpg" color="lightblue"></a-sky>
+            <a-sky src="Hunter's car 🥶.jpg" ></a-sky>
             
             <a-box position="0 0 -4" rotation="0 45 0"></a-box>
             
