--- a/3dModel-dog.html
+++ b/3dModel-dog.html
@@ -12,7 +12,7 @@
 
     
       <a-entity 
-      ply-model="src"
+      ply-model="src:
       position="0 0 -2"
       rotation="0 0 0"
       ></a-entity>
